--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
-name = "dbscan"
+name = "density_clusters"
 version = "0.1.0"
 authors = ["chrism"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# NOTE:
 # The plotlib requires the ContinusView `representations` field to be made public
+# Since this isn't the case for 0.5.0, clone the repo locally and make that change
 [dependencies]
 ndarray = "0.13"
-plotlib = {path = "../forked_repos/plotlib"}
+plotlib = {path = "./plotlib"}
 rand = "0.7.2"
 rayon = "1.2.1"
